--- a/.github/workflows/phpci.yml
+++ b/.github/workflows/phpci.yml
@@ -32,3 +32,5 @@ jobs:
         run: make lint
         # Publish code coverage on Code Climate
         # https://github.com/paambaati/codeclimate-action
+      - name: Run test
+        run: make test-coverage
