--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
             "Hexlet\\Code\\": "src/"
         },
         "files": [
-            "src/parser.php"
+            "src/differ.php"
         ]
     },
     "authors": [
@@ -18,6 +18,7 @@
         "docopt/docopt": "^1.0"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.7"
+        "squizlabs/php_codesniffer": "^3.7",
+        "phpunit/phpunit": "^9.5"
     }
 }
