--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,21 @@
 {
     "name": "hexlet/code",
+    "description": "hexlet-project-2",
+    "bin": [
+        "bin/gendiff"
+    ],
+    "license": "MIT",
     "autoload": {
         "psr-4": {
             "Hexlet\\Code\\": "src/"
         },
         "files": [
-            "src/differ.php"
+            "src/Differ.php",
+            "src/FileContent.php",
+            "src/Parsers.php",
+            "src/Formatters/Json.php",
+            "src/Formatters/Plain.php",
+            "src/Formatters/Stylish.php"
         ]
     },
     "authors": [
@@ -20,6 +30,7 @@
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "phpstan/phpstan": "^1.8"
     }
 }
