--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "files": [
             "src/Differ.php",
             "src/Parsers.php",
+            "src/Formatters.php",
             "src/Formatters/Json.php",
             "src/Formatters/Plain.php",
             "src/Formatters/Stylish.php"
