--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,11 @@
     ],
     "license": "MIT",
     "autoload": {
-        "psr-4": {
-            "Hexlet\\Code\\": "src/"
-        },
         "files": [
             "src/Differ.php",
             "src/Parsers.php",
             "src/Formatters.php",
+            "src/Filereader.php",
             "src/Formatters/Json.php",
             "src/Formatters/Plain.php",
             "src/Formatters/Stylish.php"
