--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
             "src/Differ.php",
             "src/Parsers.php",
             "src/Formatters.php",
-            "src/Filereader.php",
+            "src/FileReader.php",
             "src/Formatters/Json.php",
             "src/Formatters/Plain.php",
             "src/Formatters/Stylish.php"
